--- a/css/css.css
+++ b/css/css.css
@@ -47,8 +47,7 @@ nav ul li {
 }
 
  .landing .container{
-    display: grid;
-    grid-template-columns: 52% 45%;
+display: flex;
     padding-top: 30px;
     padding-bottom: 30px;
     font-family: "Open Sans", sans-serif;
@@ -58,16 +57,15 @@ nav ul li {
     flex-direction: column;
     justify-content: center;
     margin-left: 60px;
+    width: 50%;
 
 }
 .container .box2{
     display: flex;
     justify-content: end;
-    margin-right: 60px;
 }
 .landing .container .box2 img{
-    max-width: 560px;
-    height: 450px;
+    width: 100%;
 }
 .landing .container .box1 .txt-1 .txt1{
     
@@ -80,26 +78,34 @@ nav ul li {
     padding: 25px 0;
 }
 .container .box1 .form input[type="email"]{
-    width: 307px;
     height: 48px;
     border: #000000 1px solid;
     border-radius: 5px;
+    width: 50%;
 }
 .container .box1 .form input[type="email"]::placeholder{
     padding: 7px;
     color: rgba(0, 0, 0, 0.315);
+}
+.contact .box2 button{
+    width: 45%;
+    background-color: #3165f8;
+    height: 48px;
+    border-radius: 5px;
+    border-color: transparent;
+    color: white;
 }
 .container .box1 .form input[type="email"]:focus{
     outline: none;
 }
 .container .box1 .form input[type="submit"]{
     height: 48px;
-    width: 225px;
     border-radius: 3px;
     margin-left: 10px;
     background-color: #3165f8;
     color: white;
     border-color: transparent;
+    width: 40%;
 }
 @media(max-width:767px){
     .landing .container{
@@ -119,13 +125,22 @@ nav ul li {
     nav ul li{
         margin-right: 35px;
     }
+    .landing .container .box1{
+        width: 100% !important;
+    }
     .container .box1 .form input[type="submit"]{
-        width: 100%;
-        margin: 0;
+        width: 90% !important;
+        margin-bottom: 1rem;
+        margin-left: auto;
+        margin-right: auto;
+        
     }
     .container .box1 .form input[type="email"]{
-        width: 100%;
-        margin-bottom: 15px;
+        width: 90%;
+        margin-bottom: 1rem !important;
+        margin-left: auto;
+        margin-right: auto;
+        
     }
     header nav{
         margin: 0;
@@ -160,7 +175,7 @@ nav ul li {
         margin-top: 60px;
     }
     .photo-mob img{
-        min-width: 100%;
+        width: 100%;
     }
     .photo-desktop img{
         display: none;
@@ -168,19 +183,20 @@ nav ul li {
 }
 .about{
     padding-bottom: 30px;
-    display: grid;
-    grid-column-gap: 100px;
+    display: flex;
     background-color: #f9f8fe;
-    grid-template-columns: 50% 40%;  
+    justify-content: space-between;
+  
     font-family: "Open Sans", sans-serif ;
 }
 .about .box2{
-    display: flex;
-    justify-content: center;
-    margin-top: 65px;
+    justify-content: end;
+    flex-direction: row;
+    width: 40%;
 }
 .about .box2 img{
-    min-width: 100%;
+    width: 100%;
+    height: 100%;
 }
 .about .box1 {
     display: flex;
@@ -188,6 +204,7 @@ nav ul li {
     margin-left: 70px;
     justify-content: center;
     margin-top: 30px;
+    width: 50%;
 }
 .about .box1 .txt .p1{
     font-size: 35px;
@@ -266,7 +283,35 @@ nav ul li {
     .contact .box2 a input{
         width: 100%;
     }
+    .about .box2{
+        width: 100% !important;
+    }
+    .about .box1 {
+        width: 100%;
+    }.contact .container .box2{
+    width: 100% !important;
+    }
+    .contact .container .box1{
+        width: 100% !important;
+    }
+    .contact .box2 button{
+        width: 100% !important;
+    }footer{
+        padding-top: 4rem;
+    }
+    .contact{
+        padding: 4rem 2rem !important;
+    }
+    header nav ul li{
+        margin-left: 12px ;
+    }.about .box1 .content{
+        width: 80% !important;
+    }
 }
+
+
+
+
 .contact{
     padding: 60px;
     background-color: hsl(238, 22%, 44%);
@@ -274,7 +319,7 @@ nav ul li {
 .contact .container{
     display: flex;
     align-items: center;
-    column-gap: 165px;
+    justify-content: space-between;
 }
 
 .contact .container .box2{
@@ -282,12 +327,20 @@ nav ul li {
     display: flex;
     padding-top: 15px;
     flex-direction: column;
+    width: 50%;
 }
 .contact .container .box1 .p1{
     color: white;
     font-size: 30px;
     margin-bottom: 21px;
     font-weight: 500;
+
+}
+.contact .container .box1{
+    width: 40%;
+}
+.contact .container .box2{
+    width: 40%
 }
 .contact .container .box1 .p2{
     font-size: 16px;
@@ -296,7 +349,6 @@ nav ul li {
     color: white;
 }
 .contact .box2 input[type="email"]{
-    width: 485px;
     height: 49px;
     border-radius: 5px;
     margin: 0;
@@ -311,7 +363,6 @@ nav ul li {
     outline: none;
 }
 .contact .box2 a input{
-    width: 225px;
     height: 49px;
     background-color: #2f65f9;
     border-radius: 5px;
@@ -320,10 +371,9 @@ nav ul li {
 }
 footer{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background-color: hsl(243, 87%, 12%);
-    /* padding: 60px  0; */
     color: white;
     font-family: "Open Sans", sans-serif ; ;
 }
@@ -339,7 +389,7 @@ footer .x{
 footer .cont img{
     width: 18px;
     height: 18px;
-    margin-right: 30px;
+    
 }
 footer .icon  a i{
     color: white;
@@ -365,7 +415,7 @@ footer .box3{
 
 }
 footer .icon{
-    margin-right: 200px;
+
     padding-top: 32px;
 }
 footer .box1{
@@ -401,9 +451,6 @@ footer .box3 p{
     }
     .contact {
         text-align: center;
-    }
-    .contact .container{
-        display: grid;
     }
     .contact .box2 input[type="email"] {
         width: 100%;
